--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "puppeteer": "^10.0.0"
+    "puppeteer": "^10.0.0",
+    "puppeteer-core": "file:puppeteer-core"
   },
   "devDependencies": {},
   "scripts": {
