--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "puppeteer": "^10.0.0",
-    "puppeteer-core": "file:puppeteer-core"
+    "puppeteer": "^10.1.0",
+    "puppeteer-core": "^10.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
