--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "projeto-instagram",
+  "name": "variaveis",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bot de  comentários instagram , colocando login, senha, url, quantidade de comentários, tempo entre eles, e pausas para começar novamente da página da foto .",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "puppeteer": "^10.1.0",
+    "puppeteer-core": "^10.1.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-    
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomazss/instbut.git"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "puppeteer-core": "^10.1.0"
-  }
+  "bugs": {
+    "url": "https://github.com/tomazss/instbut/issues"
+  },
+  "homepage": "https://github.com/tomazss/instbut#readme"
 }
